--- a/index.html
+++ b/index.html
@@ -3,15 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" src="styles.css">
+    <link rel="stylesheet" href="styles.css">
     <title>Recipes</title>
 </head>
 <body>
     <h1>Odin recipes</h1>
     <ul>
-        <li><a href="recipes/lasagna.html">Lasagna</a></li>
-        <li><a href="recipes/baguettePizza.html">Baguette Pizza</a></li>
-        <li><a href="recipes/boursinBalls.html">Fried Boursin Balls</a></li>
+        <li id="lasagna" ><a href="recipes/lasagna.html">Lasagna</a></li>
+        <li id="baguettePizza" ><a href="recipes/baguettePizza.html">Baguette Pizza</a></li>
+        <li id="friedBoursinBalls" ><a href="recipes/boursinBalls.html">Fried Boursin Balls</a></li>
     </ul>
     
 </body>
