Final style added

--- a/recipes/boursinBalls.html
+++ b/recipes/boursinBalls.html
@@ -3,11 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles.css">
+    <style>
+        :root{
+            background-image: url("https://www.allrecipes.com/thmb/aoiZGD06jEoNOoTz6zG7qwdFpa4=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/7497920-fried-boursin-bites-DDMFS-4x3-054-0b474f25486d43128de874ae60c2e1db.jpg");
+            background-size: cover;
+            background-repeat: no-repeat;
+            background-position: center center;
+            height: 100vw;
+            background-attachment: fixed;        }
+    </style>
     <title>Fried Boursin Balls</title>
 </head>
 <body>
     <h1>Fried Boursin Balls</h1>
-    <img src="https://www.allrecipes.com/thmb/aoiZGD06jEoNOoTz6zG7qwdFpa4=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/7497920-fried-boursin-bites-DDMFS-4x3-054-0b474f25486d43128de874ae60c2e1db.jpg" alt="Fried Boursin Balls">
     <h2>Description</h2>
     <p>Fried boursin cheese in a small bite-sized package! These fun appetizers are crunchy on the outside, with a delicious warm herby center.</p>
     <h2>Ingredients</h2>
