--- a/index.html
+++ b/index.html
@@ -4,15 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
+    <link href="https://fonts.googleapis.com/css2?family=MedievalSharp&display=swap" rel="stylesheet">
     <title>Recipes</title>
 </head>
-<body>
+<body class=".medievalsharp-regular">
     <h1>Odin recipes</h1>
     <ul>
         <li id="lasagna" ><a href="recipes/lasagna.html">Lasagna</a></li>
         <li id="baguettePizza" ><a href="recipes/baguettePizza.html">Baguette Pizza</a></li>
         <li id="friedBoursinBalls" ><a href="recipes/boursinBalls.html">Fried Boursin Balls</a></li>
     </ul>
-    
 </body>
 </html>
