--- a/recipes/baguettePizza.html
+++ b/recipes/baguettePizza.html
@@ -3,11 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles.css">
+    <style>
+        :root{
+            background-image: url("https://www.allrecipes.com/thmb/ePA6vnIIPyLCPmdZmQmP0Uxz5-g=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/7565207_Baguette-Pizza_Thedailygourmet_4x3_retry-87210bd144a948de821ceef51651b161.jpg");
+            background-size: cover;
+            background-repeat: no-repeat;
+            background-position: center center;
+            height: 100vw;
+            background-attachment: fixed;        }
+    </style>
     <title>Baguette Pizza</title>
 </head>
 <body>
     <h1>Baguette Pizza</h1>
-    <img src="https://www.allrecipes.com/thmb/ePA6vnIIPyLCPmdZmQmP0Uxz5-g=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/7565207_Baguette-Pizza_Thedailygourmet_4x3_retry-87210bd144a948de821ceef51651b161.jpg" alt="Baguette Pizza">
     <h2>Description</h2>
     <p>Take a regular baguette and split lengthwise to create a tasty pizza. Toppings can be as simple as sauce and cheese, or upgrade with pepperoni and sausage.</p>
     <h2>Ingredients</h2>
